--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
 		"vue": "2.6.10",
 		"vue-count-to": "1.0.13",
 		"vue-cropper": "0.4.9",
-		"vue-json-editor": "^1.4.3",
+		"vue-json-pretty": "^1.8.1",
 		"vue-quill-editor": "3.0.6",
 		"vue-router": "3.0.2",
 		"vue-splitpane": "1.0.4",
