--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
 	"dependencies": {
 		"@riophae/vue-treeselect": "0.4.0",
 		"axios": "0.18.1",
-		"clipboard": "2.0.4",
 		"echarts": "4.2.1",
 		"element-ui": "2.13.2",
 		"file-saver": "2.0.1",
@@ -56,6 +55,7 @@
 		"screenfull": "4.2.0",
 		"sortablejs": "1.8.4",
 		"vue": "2.6.10",
+		"vue-clipboard2": "^0.3.1",
 		"vue-count-to": "1.0.13",
 		"vue-cropper": "0.4.9",
 		"vue-json-viewer": "^2.2.19",
